--- a/src/App.scss
+++ b/src/App.scss
@@ -1,3 +1,18 @@
 .app{
-    
+    display: flex;
+
+    .container{
+        width:100%;
+
+        .link{
+            text-decoration: none;
+            color: inherit;
+        }
+
+        //LOGIN & REGISTER
+
+
+    }
+
+   
 }
