--- a/src/App.scss
+++ b/src/App.scss
@@ -1,5 +1,8 @@
 
-
+@font-face{
+    font-family: 'Palatino';
+    src: local('Palatino'), url(../public/palatinolinotype_roman.ttf) format('truetype');
+}
 
 .app{
     display: flex;
@@ -27,6 +30,7 @@
                 font-size: 20px;
                 margin-bottom: 20px;
                 color: royalblue;
+                font-family: "Palatino";
             }
 
             form{
