--- a/src/App.scss
+++ b/src/App.scss
@@ -189,6 +189,52 @@
                 }
             }
         }//end
+
+        //WRITE
+            .write-container{
+               width: 80%;
+               margin:0 auto;
+               min-height:800px;
+                h1{
+                    
+                }
+                .section1{
+                    display: flex;
+                    flex-direction: column;
+                    gap:5;
+                    input,textarea{
+                        margin-bottom:5px;
+                        border: 0.1px solid gray;
+                        border-radius:2px;
+                    }
+
+                    .image-section{
+                        font-size:14px;
+                        padding-left:2px;
+                        label{
+                            margin-right:10px;
+                        }
+                    }
+                }
+                .section2{
+                    display: flex;
+                    justify-content: center;
+                    flex-direction: column;
+                    .froala2{
+                        height:500px;
+                    }
+                    .button{
+                        margin-left: 10px;
+                        margin-top:10px;
+                        padding:7px 10px;
+                        cursor:pointer;
+                        background-color: transparent;
+                        border: 1px solid black;
+                        border-radius:3px;
+                    }
+                }
+            }
+        //end
     }
 
    
