--- a/src/App.scss
+++ b/src/App.scss
@@ -102,6 +102,12 @@
                     display:block;
                     line-height:1;
                 }
+                .user{
+                    position: fixed;
+                    top:0;
+                    right:0;
+                    margin:10px;
+                }
 
                 }
                 .home-body{
