--- a/src/App.scss
+++ b/src/App.scss
@@ -32,7 +32,7 @@
         right:0;
         margin:10px;
     }
-    
+
     .container{
         width:87.5%;
 
@@ -163,6 +163,20 @@
                     padding-right:0;
                     vertical-align: baseline;
                 }
+                button.delButton{
+                    padding:4px 7px;
+                    background-color: white;
+                    border-radius:3px;
+                    cursor: pointer;
+
+                }
+                button.delButton:hover{
+                    background-color: gray;
+                    color: white;
+                    border: 1px solid gray;
+                }
+
+
                 section{
                     display:block;
                     blockquote{
