--- a/src/App.scss
+++ b/src/App.scss
@@ -225,6 +225,7 @@
                width: 80%;
                margin:0 auto;
                min-height:800px;
+               padding-bottom:50px;
                 h1{
                     
                 }
